--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
   <body>
     <div w3-include-html="nav.html"></div>
-    <header>
+    <!-- banner section -->
+    <section>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -33,18 +34,12 @@
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
           <div class="carousel-item active" style="background-image: url('img/banner-1.png')">
-            <!-- <img src="img/banner-1.png" srcset="img/banner-1@2x.png 2x,
-             img/banner-1@3x.png 3x" class="BANNER_1"> -->
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
           <div class="carousel-item" style="background-image: url('img/banner-2.png')">
-            <!-- <img src="img/banner-2.png" srcset="img/banner-2@2x.png 2x,
-             img/banner-2@3x.png 3x" class="BANNER_1"> -->
           </div>
-          <!-- Slide Three - Set the background image for this slide in the line below -->
+          <!-- Slide Three - Set the backgrsound image for this slide in the line below -->
           <div class="carousel-item" style="background-image: url('img/banner-3.png')">
-            <!-- <img src="img/banner-3.png" srcset="img/banner-3@2x.png 2x,
-             img/banner-3@3x.png 3x" class="BANNER_1"> -->
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -56,9 +51,10 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </header>
+    </section>
 
     <!-- Category -->
+    <section>
     <div class="container mt-4-3">
       <div class="row">
         <div class="col-lg-4 mb-4">
@@ -111,6 +107,7 @@
         </div>
       </div>
     </div>
+    </section>
 
     <!-- Page Content -->
     <div class="container">
@@ -218,57 +215,14 @@
 
     <section class="section-service">
       <div class="container text-center">
-        <h3 class="mb-2 mt-2">ULTIRACER is Designed to Enjoy Bike Riding with User's own Bikes.</h3>
-        <h4 class="mb-2 mt-2">By putting their own bike on the ULTIRACER, They will face a Whole New Experience.</h4>
+        <img src="img/con-service-ipad.png">
       </div>
     </section>
 
     <div class="container">
 
-    <!-- 지금 가장 인기 있는 LIVE -->
-    <h3 class="my-4">지금 가장 인기 있는 LIVE</h1>
-
-      <!-- Marketing Icons Section -->
-      <div class="row">
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
-            <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
-            <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet,
-                magni
-                nostrum sint fuga.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
-            <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- EVENT 11월 한정 아이쿠카 특가 LIVE -->
-      <h3 class="my-4">Event 11월 한정 아이쿠카 특가 LIVE</h1>
+      <!-- 지금 가장 인기 있는 LIVE -->
+      <h3 class="my-4">지금 가장 인기 있는 LIVE</h1>
 
         <!-- Marketing Icons Section -->
         <div class="row">
@@ -287,8 +241,7 @@
             <div class="card h-100">
               <h4 class="card-header">Card Title</h4>
               <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed
-                  eveniet,
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet,
                   magni
                   nostrum sint fuga.</p>
               </div>
@@ -309,78 +262,121 @@
             </div>
           </div>
         </div>
-        <!-- 높은 리뷰와 평점의 선생님 -->
-        <h3 class="my-4">높은 리뷰와 평점의 선생님</h1>
 
-          <div class="container mt-4">
-            <div class="row">
-              <div class="col-lg-2 mb-4">
-                <a href="#" class="btn btn-hts">1</a>
-              </div>
-              <div class="col-lg-2 mb-4">
-                <a href="#" class="btn btn-hts">2</a>
-              </div>
-              <div class="col-lg-2 mb-4">
-                <a href="#" class="btn btn-hts">3</a>
-              </div>
-              <div class="col-lg-2 mb-4">
-                <a href="#" class="btn btn-hts">4</a>
-              </div>
-              <div class="col-lg-2 mb-4">
-                <a href="#" class="btn btn-hts">5</a>
-              </div>
-              <div class="col-lg-2 mb-4">
-                <a href="#" class="btn btn-hts">6</a>
+        <!-- EVENT 11월 한정 아이쿠카 특가 LIVE -->
+        <h3 class="my-4">Event 11월 한정 아이쿠카 특가 LIVE</h1>
+
+          <!-- Marketing Icons Section -->
+          <div class="row">
+            <div class="col-lg-4 mb-4">
+              <div class="card h-100">
+                <h4 class="card-header">Card Title</h4>
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">Learn More</a>
+                </div>
               </div>
             </div>
-
+            <div class="col-lg-4 mb-4">
+              <div class="card h-100">
+                <h4 class="card-header">Card Title</h4>
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed
+                    eveniet,
+                    magni
+                    nostrum sint fuga.</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">Learn More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-4">
+              <div class="card h-100">
+                <h4 class="card-header">Card Title</h4>
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">Learn More</a>
+                </div>
+              </div>
+            </div>
           </div>
+          <!-- 높은 리뷰와 평점의 선생님 -->
+          <h3 class="my-4">높은 리뷰와 평점의 선생님</h1>
 
-          <!-- NEW 높은 리뷰와 평점의 선생님 -->
-          <h3 class="my-4">NEW 높은 리뷰와 평점의 선생님</h1>
+            <div class="container mt-4">
+              <div class="row">
+                <div class="col-lg-2 mb-4">
+                  <a href="#" class="btn btn-hts">1</a>
+                </div>
+                <div class="col-lg-2 mb-4">
+                  <a href="#" class="btn btn-hts">2</a>
+                </div>
+                <div class="col-lg-2 mb-4">
+                  <a href="#" class="btn btn-hts">3</a>
+                </div>
+                <div class="col-lg-2 mb-4">
+                  <a href="#" class="btn btn-hts">4</a>
+                </div>
+                <div class="col-lg-2 mb-4">
+                  <a href="#" class="btn btn-hts">5</a>
+                </div>
+                <div class="col-lg-2 mb-4">
+                  <a href="#" class="btn btn-hts">6</a>
+                </div>
+              </div>
 
-            <!-- Marketing Icons Section -->
-            <div class="row">
-              <div class="col-lg-4 mb-4">
-                <div class="card h-100">
-                  <h4 class="card-header">Card Title</h4>
-                  <div class="card-body">
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-                  </div>
-                  <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Learn More</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 mb-4">
-                <div class="card h-100">
-                  <h4 class="card-header">Card Title</h4>
-                  <div class="card-body">
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed
-                      eveniet, magni
-                      nostrum sint fuga.</p>
-                  </div>
-                  <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Learn More</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 mb-4">
-                <div class="card h-100">
-                  <h4 class="card-header">Card Title</h4>
-                  <div class="card-body">
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-                  </div>
-                  <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Learn More</a>
-                  </div>
-                </div>
-              </div>
-            </div>
             </div>
 
-            <!-- Features Section -->
-            <!-- <div class="row">
+            <!-- NEW 높은 리뷰와 평점의 선생님 -->
+            <h3 class="my-4">NEW 높은 리뷰와 평점의 선생님</h1>
+
+              <!-- Marketing Icons Section -->
+              <div class="row">
+                <div class="col-lg-4 mb-4">
+                  <div class="card h-100">
+                    <h4 class="card-header">Card Title</h4>
+                    <div class="card-body">
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                    </div>
+                    <div class="card-footer">
+                      <a href="#" class="btn btn-primary">Learn More</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                  <div class="card h-100">
+                    <h4 class="card-header">Card Title</h4>
+                    <div class="card-body">
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed
+                        eveniet, magni
+                        nostrum sint fuga.</p>
+                    </div>
+                    <div class="card-footer">
+                      <a href="#" class="btn btn-primary">Learn More</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                  <div class="card h-100">
+                    <h4 class="card-header">Card Title</h4>
+                    <div class="card-body">
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                    </div>
+                    <div class="card-footer">
+                      <a href="#" class="btn btn-primary">Learn More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+    </div>
+
+    <!-- Features Section -->
+    <!-- <div class="row">
       <div class="col-lg-6">
         <h2>Modern Business Features</h2>
         <p>The Modern Business template by Start Bootstrap includes:</p>
@@ -412,20 +408,20 @@
 
 
 
-            <!-- Footer -->
-            <!-- <footer class="py-5 bg-dark">
+    <!-- Footer -->
+    <!-- <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
     </div>
   </footer> -->
-            <div w3-include-html="footer.html"></div>
+    <div w3-include-html="footer.html"></div>
 
-            <!-- Bootstrap core JavaScript -->
-            <script src="vendor/jquery/jquery.min.js"></script>
-            <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-            <script>
-              w3.includeHTML();
-            </script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script>
+      w3.includeHTML();
+    </script>
 
   </body>
 
