--- a/class_live.html
+++ b/class_live.html
@@ -21,18 +21,23 @@
 <body>
   <div w3-include-html="nav.html"></div>
   <!-- Page Content -->
-  <div class="container">
-    <h3 class="my-4">내 콘텐츠</h1>
-      <hr>
-      블라블라블라블라
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-lg-8">
+        <img src="img/bitmap.png">
+      </div>
+      <div class="col-lg-4 chat">
+      </div>
+    </div>
   </div>
-
   <div w3-include-html="footer.html"></div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script> w3.includeHTML();</script>
+  <script>
+    w3.includeHTML();
+  </script>
 
 </body>
 
