--- a/index.html
+++ b/index.html
@@ -163,13 +163,12 @@
       <div class="row">
         <div class="col-lg-3 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="img/rectangle.png" alt=""></a>
             <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project One</a>
+              <h4 class="vod-title">
+                작곡으로 읽는 나의 마음
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil,
-                dolorem!</p>
+              <p class="vod-contents">이민호 · 음악지능</p>
             </div>
           </div>
         </div>
