--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <!-- Slide One - Set the background image for this slide in the line below -->
+          <div class="carousel-item active" style="background-image: url('img/banner-1.png')">
+          <div class="container">
           <div class="carousel-item active" style="background-image: url('img/banner-1.png')">
           </div>
-          <!-- Slide Two - Set the background image for this slide in the line below -->
+        </div>
           <div class="carousel-item" style="background-image: url('img/banner-2.png')">
+            <img src="img/banner-2.png">
           </div>
-          <!-- Slide Three - Set the backgrsound image for this slide in the line below -->
           <div class="carousel-item" style="background-image: url('img/banner-3.png')">
+            <img src="img/banner-3.png">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
