--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active" style="background-image: url('img/banner-1.png')">
-        </div>
+          </div>
           <div class="carousel-item" style="background-image: url('img/banner-2.png')">
             <img src="img/banner-2.png">
           </div>
@@ -54,84 +54,72 @@
 
     <!-- Category -->
     <section>
-    <div class="container mt-4-3">
-      <div class="row">
-        <div class="col-lg-4 mb-4">
-          <div class="row">
-            <div class="col-lg-4 mb-4 text-center">
-              <img src="img/int-default-01.png">
-              <p class="Category-text">전체카테고리</p>
-            </div>
-            <div class="col-lg-4 mb-4 text-center">
-              <img src="img/int-on-01.png">
-              <p class="Category-text">언어지능</p>
-            </div>
-            <div class="col-lg-4 mb-4 text-center">
-              <img src="img/int-on-02.png">
-              <p class="Category-text">신체운동지능</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="row">
-            <div class="col-lg-4 mb-4 text-center">
-              <img src="img/int-on-03.png">
-              <p class="Category-text">논리수학지능</p>
-            </div>
-            <div class="col-lg-4 mb-4 text-center">
-              <img src="img/int-on-04.png">
-              <p class="Category-text">음악지능</p>
-            </div>
-            <div class="col-lg-4 mb-4 text-center">
-              <img src="img/int-on-05.png">
-              <p class="Category-text">공간지능</p>
+      <div class="container mt-4-3">
+        <div class="row">
+          <div class="col-lg-4 mb-4">
+            <div class="row">
+              <div class="col-lg-4 mb-4 text-center">
+                <img src="img/int-default-01.png">
+                <p class="Category-text">전체카테고리</p>
+              </div>
+              <div class="col-lg-4 mb-4 text-center">
+                <img src="img/int-on-01.png">
+                <p class="Category-text">언어지능</p>
+              </div>
+              <div class="col-lg-4 mb-4 text-center">
+                <img src="img/int-on-02.png">
+                <p class="Category-text">신체운동지능</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="row">
-            <div class="col-lg-4 mb-4 text-center">
-              <img src="img/int-on-06.png">
-              <p class="Category-text">자연지능</p>
+          <div class="col-lg-4 mb-4">
+            <div class="row">
+              <div class="col-lg-4 mb-4 text-center">
+                <img src="img/int-on-03.png">
+                <p class="Category-text">논리수학지능</p>
+              </div>
+              <div class="col-lg-4 mb-4 text-center">
+                <img src="img/int-on-04.png">
+                <p class="Category-text">음악지능</p>
+              </div>
+              <div class="col-lg-4 mb-4 text-center">
+                <img src="img/int-on-05.png">
+                <p class="Category-text">공간지능</p>
+              </div>
             </div>
-            <div class="col-lg-4 mb-4 text-center">
-              <img src="img/int-on-07.png">
-              <p class="Category-text">자기성찰지능</p>
-            </div>
-            <div class="col-lg-4 mb-4 text-center">
-              <img src="img/int-on-08.png">
-              <p class="Category-text">인간친화지능</p>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="row">
+              <div class="col-lg-4 mb-4 text-center">
+                <img src="img/int-on-06.png">
+                <p class="Category-text">자연지능</p>
+              </div>
+              <div class="col-lg-4 mb-4 text-center">
+                <img src="img/int-on-07.png">
+                <p class="Category-text">자기성찰지능</p>
+              </div>
+              <div class="col-lg-4 mb-4 text-center">
+                <img src="img/int-on-08.png">
+                <p class="Category-text">인간친화지능</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     </section>
 
     <!-- Page Content -->
     <div class="container">
-      <div class="row">
-        <h3 class="title-text-1">This Week </h3>
-        <h3 class="title-text-2">이번주 LIVE!</h3>
+      <div class="row ml-1">
+        <h2 class="title-text-1">This Week </h2>
+        <h2 class="title-text-2">이번주 LIVE!</h2>
       </div>
-
-
       <!-- Marketing Icons Section -->
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
-            <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <div class="card-header" style="background-image:url('img/class-3-announcer-home-thum.png')">
             </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
             <div class="card-body">
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet,
                 magni
@@ -144,7 +132,20 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
+            <div class="card-header" style="background-image:url('img/class-3-announcer-home-thum.png')">
+            </div>
+            <div class="card-body">
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <div class="card-header" style="background-image:url('img/class-3-announcer-home-thum.png')">
+            </div>
             <div class="card-body">
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
             </div>
