--- a/nav.html
+++ b/nav.html
@@ -6,15 +6,19 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item nav-black">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
           <a class="nav-link text-black" href="#">클래스 홈</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-black" href="class_live.html">LIVE 홈</a>
+          <u class="nav-link text-black" href="#">LIVE 홈</u>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-black" href="#">검색어를 입력해주세요</a>
+          <nav class="navbar navbar-light bg-light">
+            <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="검색어를 입력해주세요" aria-label="Search">
+            </form>
+          </nav>
         </li>
         <li class="nav-item">
           <a class="nav-link text-black" href="#">선생님 신청</a>
