--- a/nav.html
+++ b/nav.html
@@ -20,6 +20,8 @@
             </form>
           </nav>
         </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link text-black" href="#">선생님 신청</a>
         </li>
