--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Custom styles for this template -->
   <link href="css/happytoseeyou.css" rel="stylesheet">
   <script src="https://www.w3schools.com/lib/w3.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 
 </head>
 
@@ -118,39 +119,47 @@
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <div class="card-header" style="background-image:url('img/class-3-announcer-home-thum.png')">
-            </div>
-            <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet,
-                magni
-                nostrum sint fuga.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100">
-            <div class="card-header" style="background-image:url('img/class-3-announcer-home-thum.png')">
-            </div>
-            <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+            <img src="img/st-hot.png" style="position: absolute"/>
+            <i class="far fa-heart icon-like"></i>
+            <img class="img-thum" src="img/class-3-announcer-home-thum.png" />
+            <span class="card-title-0">아나운서한테 배우는 스피치 트레이닝</span>
+            <span class="card-text-0">이슬기 · 12월 18일 · LIVE, 온라인</span>
+            <div class="row card-extra">
+              <i class="fas fa-user text-pink"></i>
+              <span class="card-text-extra text-pink">18명 참여</span>
+              <i class="fas fa-star" style="margin-left:16px;"></i>
+              <span class="card-text-extra">4.8 (120)</span>
             </div>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <div class="card-header" style="background-image:url('img/class-3-announcer-home-thum.png')">
+            <img src="img/st-hot.png" style="position: absolute"/>
+            <i class="far fa-heart icon-like"></i>
+            <img class="img-thum" src="img/2-52.png" />
+            <span class="card-title-0">용기 쑥쑥! 부비의 용기 여행 같이 떠나요!</span>
+            <span class="card-text-0">신지원 · 12월 20일 · LIVE</span>
+            <div class="row card-extra">
+              <i class="fas fa-user text-pink"></i>
+              <span class="card-text-extra text-pink">18명 참여</span>
+              <i class="fas fa-star" style="margin-left:16px;"></i>
+              <span class="card-text-extra">4.8 (120)</span>
+              <span class="span-ready">준비중</span>
             </div>
-            <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <img src="img/st-hot.png" style="position: absolute"/>
+            <i class="far fa-heart icon-like"></i>
+            <img class="img-thum" src="img/1-2.png" />
+            <span class="card-title-0">이윤규 변호사와 함께 떠나는 초등 공부법!</span>
+            <span class="card-text-0">이윤규 · 12월 22일 · LIVE</span>
+            <div class="row card-extra">
+              <i class="fas fa-user text-pink"></i>
+              <span class="card-text-extra text-pink">18명 참여</span>
+              <i class="fas fa-star" style="margin-left:16px;"></i>
+              <span class="card-text-extra">4.8 (120)</span>
             </div>
           </div>
         </div>
