--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
               <span class="card-text-extra text-pink">18명 참여</span>
               <i class="fas fa-star" style="margin-left:16px;"></i>
               <span class="card-text-extra">4.8 (120)</span>
-              <span class="span-ready">준비중</span>
+              <span class="span-ready ml-auto">준비중</span>
             </div>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
             <img src="img/st-hot.png" style="position: absolute"/>
-            <i class="far fa-heart icon-like"></i>
+            <i class="fas fa-heart icon-like"></i>
             <img class="img-thum" src="img/1-2.png" />
             <span class="card-title-0">이윤규 변호사와 함께 떠나는 초등 공부법!</span>
             <span class="card-text-0">이윤규 · 12월 22일 · LIVE</span>
